simplified the types
simplified the types

--- a/typedef/Makefile
+++ b/typedef/Makefile
@@ -2,7 +2,7 @@ SHELL = /bin/sh
 include ../configure.in
 include ../compile_rules.in
 TYPEDEFLIB = libcooptypedef.a
-TYPEDEFOBJ = constants.o basictype.o basicutils.o typedef.o utils.o
+TYPEDEFOBJ = constants.o svd.o basicutils.o arguments.o function.o  species.o cosmology.o wrapper.o
 
 default: $(TYPEDEFLIB)
 
@@ -14,3 +14,10 @@ Test: $(TYPEDEFOBJ) test.o ../headfile/constants.h
 
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test
+
+
+wrapper.o 	:typedef.o
+typedef.o	:basictype.o
+basictype.o	:basicutils.o
+basicutils.o	:svd.o
+svd.o		:constants.o
