massive neutrino works
massive neutrino works

--- a/typedef/Makefile
+++ b/typedef/Makefile
@@ -2,22 +2,28 @@ SHELL = /bin/sh
 include ../configure.in
 include ../compile_rules.in
 TYPEDEFLIB = libcooptypedef.a
-TYPEDEFOBJ = constants.o svd.o basicutils.o string.o arguments.o function.o  species.o cosmology.o wrapper.o
+TYPEDEFOBJ = constants.o svd.o basicutils.o string.o arguments.o function.o  particle.o species.o cosmology.o wrapper.o
 
 default: $(TYPEDEFLIB)
 
-$(TYPEDEFLIB): $(TYPEDEFOBJ) ../headfile/constants.h 
+$(TYPEDEFLIB): $(TYPEDEFOBJ) 
 	ar -r $@ $?
 
-Test: $(TYPEDEFOBJ) test.o ../headfile/constants.h
+Test: $(TYPEDEFOBJ) test.o 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(TYPEDEFOBJ) test.o $(LINK)
 
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test
 
 
-wrapper.o 	:typedef.o
-typedef.o	:basictype.o
-basictype.o	:basicutils.o
+test.o		:wrapper.o
+wrapper.o 	:cosmology.o
+cosmology.o	:species.o
+species.o	:particle.o
+particle.o	:function.o ../headfile/species_init.h
+function.o	:arguments.o
+arguments.o	:string.o
+string.o	:basicutils.o
 basicutils.o	:svd.o
 svd.o		:constants.o
+constants.o	: ../headfile/constants.h
