use include directory

--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -1,19 +1,19 @@
 SHELL = /bin/sh
 
-TYPEDEF = ../typedef/
+BACKGROUND=../background
 
 include ../configure.in
 include ../compile_rules.in
 
-BGLIB = libcoopbackground.a
-BGOBJ = background.o wrapper.o
+BGLIB = libcoopfirstorder.a
+BGOBJ = firstorder.o wrapper.o
 
 default: $(BGLIB)
 
 $(BGLIB): $(BGOBJ) 
 	ar -r $@ $?
 
-Test: $(BGOBJ) test.o ../include/background.h $(TYPEDEF)/libcooptypedef.a
+Test: $(BGOBJ) test.o ../background/libcoopbackground.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) test.o $(LINK)
 
 clean:
