--- a/configure.in
+++ b/configure.in
@@ -35,7 +35,8 @@ C_COMPILER = $(GCC_NAME)
 LAPACK = $(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
-FFTW3=$(HOME)/includes/fftw3
+FFTW3=
+#$(HOME)/includes/fftw3
 
 ## gsl lib 
 GSL =
@@ -88,7 +89,7 @@ endif
 #CFLAGS =
 
 LINK = 
-INCLUDE = -I. -I../headfile/
+INCLUDE = -I. -I../include/
 
 
 CC = $(C_COMPILER)
