--- a/background/Makefile
+++ b/background/Makefile
@@ -1,6 +1,7 @@
 SHELL = /bin/sh
 
-TYPEDEF = ../typedef/
+TYPEDEF = ../typedef
+UTILS = ../utils/
 
 include ../configure.in
 include ../compile_rules.in
@@ -10,10 +11,10 @@ BGOBJ = background.o wrapper.o
 
 default: $(BGLIB)
 
-$(BGLIB): $(BGOBJ) 
+$(BGLIB): $(BGOBJ) $(UTILS)/libcooputils.a
 	ar -r $@ $?
 
-Test: $(BGOBJ) test.o ../include/background.h $(TYPEDEF)/libcooptypedef.a
+Test: $(BGOBJ) test.o ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) test.o $(LINK)
 
 clean:
