--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,12 +6,12 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcooputils.a
-OBJ = cwrapper.o  MPIutils.o sort.o list.o random.o specfunc.o matrix.o interpolation.o integrate.o wrapper.o
-# chebyshev.o gaussianfit.o utils.o   asympt.o ode.o  tabfunc.o  file_io.o cloud.o  inifile.o pshacker.o asy.o  jlbrute.o sphericalbessels.o threejs.o jllpm.o particle.o fft.o wraputils.o solvepower.o zqwrap.o
+OBJ = cwrapper.o  MPIutils.o sort.o list.o random.o specfunc.o matrix.o interpolation.o integrate.o ode.o file_io.o asy.o  wrapper.o
+#jlbrute.o sphericalbessels.o threejs.o jllpm.o particle.o fft.o wraputils.o solvepower.o zqwrap.o
 
 default: $(LIB)
 
-$(LIB): $(OBJ) $(TYPEDEF)/libcooptypedef.a
+$(LIB): $(OBJ) 
 	ar -r $@ $?
 
 Test: $(OBJ) test.o $(TYPEDEF)/libcooptypedef.a
