add more configure files
add more configure files for different platform

--- a/configure_linux_gfortran.in
+++ b/configure_linux_gfortran.in
@@ -1,6 +1,6 @@
-PLATFORM = MacOS
+#PLATFORM = MacOS
 #PLATFORM = Windows
-#PLATFORM = LINUX
+PLATFORM = LINUX
 
 ifeq ($(PLATFORM),MacOS)
 GFORTRAN_NAME = gfortran-mp-4.7
