fix problem for NO_LAPACK option
fix problem for NO_LAPACK option

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -7,7 +7,7 @@ include ../compile_rules.in
 
 LIB = libcooputils.a
 OBJ = cwrapper.o  MPIutils.o sort.o list.o random.o specfunc.o matrix.o interpolation.o integrate.o ode.o file_io.o asy.o  wrapper.o
-#jlbrute.o sphericalbessels.o threejs.o jllpm.o particle.o fft.o wraputils.o solvepower.o zqwrap.o
+#jlbrute.o sphericalbessels.o threejs.o jllpm.o  fft.o wraputils.o solvepower.o zqwrap.o
 
 default: $(LIB)
 
