--- a/configure.in
+++ b/configure.in
@@ -45,7 +45,8 @@ GSL =
 
 
 ##cfitsio lib, mandatory if you include WMAP
-CFITSIO = $(HOME)/work/scilibs/cfitsio
+CFITSIO =
+# $(HOME)/work/scilibs/cfitsio
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
