added derivative2 in function type
derivative2 in function type

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,9 +4,15 @@ COOPLIB=../lib
 include ../configure.in
 include ../compile_rules.in
 
+Example1: example1.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example1.o $(LINK)
+
+Example2: example2.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example2.o $(LINK)
+
 
 Test: test.o 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ test.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test Example1 Example2 *.txt *.pdf
