--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,8 +6,8 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcooputils.a
-OBJ = cwrapper.o  MPIutils.o sort.o list.o random.o specfunc.o matrix.o interpolation.o integrate.o ode.o file_io.o asy.o  fft.o wrapper.o 
-#jlbrute.o sphericalbessels.o threejs.o jllpm.o  fft.o wraputils.o solvepower.o zqwrap.o
+OBJ = MPIutils.o list.o random.o specfunc.o matrix.o interpolation.o integrate.o ode.o file_io.o asy.o  fft.o wrapper.o 
+#jlbrute.o sphericalbessels.o threejs.o jllpm.o  jlbrute.o 
 
 default: $(LIB)
 
