--- a/configure.in
+++ b/configure.in
@@ -42,8 +42,11 @@ GSL =
 #$(HOME)/mathlib/gsl
 
 
-##cfitsio lib, mandatory if you include WMAP
+##cfitsio lib, mandatory if you do mapio
 CFITSIO = $(HOME)/work/scilibs/cfitsio
+
+##Healpix lib, mandatory if you do mapio
+HEALPIX = $(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -152,6 +155,14 @@ LINK += -L$(CFITSIO)/lib -lcfitsio
 FFLAGS += -DHAS_CFITSIO=1
 CFLAGS += -DHAS_CFITSIO=1
 INCLUDE += -I$(CFITSIO)/include
+endif
+
+### set Healpix flags here
+ifneq ($(HEALPIX),)
+LINK += -L$(HEALPIX)/lib -lhealpix 
+FFLAGS += -DHAS_HEALPIX=1
+CFLAGS += -DHAS_HEALPIX=1
+INCLUDE += -I$(HEALPIX)/include
 endif
 
 
