--- a/configure_linux_ifort.in
+++ b/configure_linux_ifort.in
@@ -21,19 +21,18 @@ MPI_COMPILER_ALIAS = mpif90
 USE_OPENMP = YES
 ##### compilers
 #free compiler $(GCC_NAME) and $(GFORTRAN_NAME); you also need preprocessor that comes with $(GCC_NAME)
+#FORTRAN_COMPILER = $(GFORTRAN_NAME)
+#C_COMPILER = $(GCC_NAME)
+#if you have intel compilers
 FORTRAN_COMPILER = $(IFORT_NAME)
 C_COMPILER = $(ICC_NAME)
-#if you have intel compilers
-#FORTRAN_COMPILER = $(IFORT_NAME)
-#C_COMPILER = $(ICC_NAME)
 ########################librarys #############################################
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
 ##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
 
-LAPACK =
-# $(HOME)/includes/lapack-3.4.2
+LAPACK = $(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
 FFTW3=
@@ -44,9 +43,13 @@ GSL =
 #$(HOME)/mathlib/gsl
 
 
-##cfitsio lib, mandatory if you include WMAP
+##cfitsio lib, mandatory if you do mapio
 CFITSIO = 
 #$(HOME)/work/scilibs/cfitsio
+
+##Healpix lib, mandatory if you do mapio
+HEALPIX = 
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -108,32 +111,10 @@ endif
 
 ####################do not need to change anything below ################
 
-
-ifneq ($(TYPEDEF),)
-LINK += -L$(TYPEDEF) -lcooptypedef
-INCLUDE += -I$(TYPEDEF)
-endif
-
-ifneq ($(UTILS),)
-LINK += -L$(UTILS) -lcooputils
-INCLUDE += -I$(UTILS)
-endif
-
-ifneq ($(BACKGROUND),)
-LINK += -L$(BACKGROUND) -lcoopbackground
-INCLUDE += -I$(BACKGROUND)
-endif
-
-ifneq ($(FIRSTORDER),)
-LINK += -L$(FIRSTORDER) -lcoopfirstorder
-INCLUDE += -I$(FIRSTORDER)
-endif
-
 ifneq ($(COOPLIB),)
 LINK += -L$(COOPLIB) -lcoop
 INCLUDE += -I$(COOPLIB)
 endif
-
 
 ifneq ($(NONLINEAR),)
 LINK += -L$(NONLINEAR) -lcoopnonlinear
@@ -146,6 +127,28 @@ INCLUDE += -I$(SECONDORDER)
 endif
 
 
+ifneq ($(FIRSTORDER),)
+LINK += -L$(FIRSTORDER) -lcoopfirstorder
+INCLUDE += -I$(FIRSTORDER)
+endif
+
+
+ifneq ($(BACKGROUND),)
+LINK += -L$(BACKGROUND) -lcoopbackground
+INCLUDE += -I$(BACKGROUND)
+endif
+
+
+ifneq ($(UTILS),)
+LINK += -L$(UTILS) -lcooputils
+INCLUDE += -I$(UTILS)
+endif
+
+ifneq ($(TYPEDEF),)
+LINK += -L$(TYPEDEF) -lcooptypedef
+INCLUDE += -I$(TYPEDEF)
+endif
+
 
 ###set cfitsio flags here
 ifneq ($(CFITSIO),)
@@ -153,6 +156,14 @@ LINK += -L$(CFITSIO)/lib -lcfitsio
 FFLAGS += -DHAS_CFITSIO=1
 CFLAGS += -DHAS_CFITSIO=1
 INCLUDE += -I$(CFITSIO)/include
+endif
+
+### set Healpix flags here
+ifneq ($(HEALPIX),)
+LINK += -L$(HEALPIX)/lib -lhealpix 
+FFLAGS += -DHAS_HEALPIX=1
+CFLAGS += -DHAS_HEALPIX=1
+INCLUDE += -I$(HEALPIX)/include
 endif
 
 
