--- a/configure_linux_gfortran.in
+++ b/configure_linux_gfortran.in
@@ -32,7 +32,8 @@ C_COMPILER = $(GCC_NAME)
 ##############################################################################
 ##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
 
-LAPACK = $(HOME)/includes/lapack-3.4.2
+LAPACK = 
+#$(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
 FFTW3=
