--- a/background/Makefile
+++ b/background/Makefile
@@ -14,8 +14,12 @@ default: $(BGLIB)
 $(BGLIB): $(BGOBJ) 
 	ar -r $@ $?
 
-Test: $(BGOBJ) test.o ../include/background.h $(UTILS)/libcooputils.a
+Test: $(BGOBJ) test.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) test.o $(LINK)
+
+
+PlotData: $(BGOBJ) plotdata.o ../include/background.h $(UTILS)/libcooputils.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) plotdata.o $(LINK)
 
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test
