--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -25,6 +25,10 @@ HSM: $(OBJ) half_sphere_mask.o
 Test: $(OBJ) test.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
+SimuMaps: $(OBJ) simulate_maps.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) simulate_maps.o $(LINK)
+
+
 GetSpots: $(OBJ) exportspots.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) exportspots.o $(LINK)
 
