try power_traj subroutines
try power_traj subroutines

--- a/postprocess/Makefile
+++ b/postprocess/Makefile
@@ -1,6 +1,5 @@
-SHELL = /bin/sh
-TYPEDEF=../typedef
-UTILS=../utils
+SHELL=/bin/sh
+COOPLIB=../lib
 include ../configure.in
 include ../compile_rules.in
 
