--- a/postprocess/example.ini
+++ b/postprocess/example.ini
@@ -1,8 +1,8 @@
-root = ../../cosmomc/chains/qcdm_eps
+root = ../../../scilibs/cosmomcplanck/chains/pp11
 output = plots/
 discard_percent = 25
 
-want2d = epsinf, epss; zetas, epss; omegam, epss
+want2d =
 
 wantpca =
 color2d_light = 
