--- a/test/Makefile
+++ b/test/Makefile
@@ -10,8 +10,12 @@ Example1: example1.o
 Example2: example2.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ example2.o $(LINK)
 
+Check: check_perturbation5.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ check_perturbation5.o $(LINK)
+
 Quint: quintessence.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ quintessence.o $(LINK)
+
 Test:	test.o 
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ test.o $(LINK)
 
