--- a/configure.in
+++ b/configure.in
@@ -113,16 +113,20 @@ LINK += -L$(COOPLIB) -lcoop
 INCLUDE += -I$(COOPLIB)
 endif
 
-ifneq ($(NONLINEAR),)
-LINK += -L$(NONLINEAR) -lcoopnonlinear
-INCLUDE += -I$(NONLINEAR)
-endif
-
 ifneq ($(SECONDORDER),)
 LINK += -L$(SECONDORDER) -lcoopsecondorder
 INCLUDE += -I$(SECONDORDER)
 endif
 
+ifneq ($(FORECAST),)
+LINK += -L$(FORECAST) -lcoopforecast
+INCLUDE += -I$(FORECAST)
+endif
+
+ifneq ($(NONLINEAR),)
+LINK += -L$(NONLINEAR) -lcoopnonlinear
+INCLUDE += -I$(NONLINEAR)
+endif
 
 ifneq ($(FIRSTORDER),)
 LINK += -L$(FIRSTORDER) -lcoopfirstorder
