--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -71,6 +71,9 @@ HSL: $(OBJ) hemisphere.o
 POSTHSL: $(OBJ) post_hsl.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) post_hsl.o $(LINK)
 
+ByProd: $(OBJ) map_by_prodcuts.o
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_by_prodcuts.o $(LINK)
+
 
 MSMAP: $(OBJ) map_merge_split.o
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) map_merge_split.o $(LINK)
